codepkg/objects/Project_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Application_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Extension</label>
        <referenceTo>Application_Extension__c</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Project Budgets</relationshipLabel>
        <relationshipName>Project_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Management Cost</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Budget</label>
    <nameField>
        <displayFormat>PB-{00000}</displayFormat>
        <label>Project Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>